--- a/2022ad.html
+++ b/2022ad.html
@@ -3,7 +3,8 @@
   <head>
     <title>Where are the robots</title>
     <link href="https://fonts.googleapis.com/css?family=Monoton|Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="./Web3_files/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./Web3_files/style.css">
   </head>
   <body>
     <div class="container">
