--- a/Web1/index.html
+++ b/Web1/index.html
@@ -28,7 +28,7 @@
 	  CSS <br/>
 	  JS (JavaScript)
 	</p>
-	<!-- Html is neat. Anyways have 1/3 of the flag: picoCTF{tru3_d3 -->
+	<!-- Html is neat. Anyways have 1/3 of the flag: ccctf{true_d3 -->
       </div>
       
     </div>
